# taskflow

./: .gitignore  ARCHITECTURE.md  App.tsx  BUILD_APK.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GITHUB_BUILD.md  QUICK_START.md  README.md  SECURITY.md  app.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .env.example  mypy.ini  pyproject.toml  requirements-build.in  requirements-build.txt  requirements.in  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py  files.py  git.py  plugins.py  tasks.py
backend/app/core/: exceptions.py  file_organizer.py  git_manager.py  llm.py  security.py
backend/app/models/: __init__.py  file.py  operation.py  task.py
backend/app/schemas/: task.py
backend/app/utils/: validator.py
backend/fuzz/: README.md  test_validator_fuzz.py
backend/tests/: test_file_organizer.py  test_git.py  test_llm.py  test_plugins.py
backend/tests/integration/: test_api.py
desktop/: electron-builder.yml  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
docs/: cii-best-practices.md  fuzzing.md  index.html
relay/: package-lock.json  package.json  tsconfig.json
releases/: README.md
screens/: AnalyticsScreen.tsx  AutomationScreen.tsx  CalendarScreen.tsx  CategoriesScreen.tsx  GoalsScreen.tsx  HabitsScreen.tsx  HomeScreen.tsx  NotesScreen.tsx  ProjectsScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  TagsScreen.tsx  (+3 more)
(+224 files in other folders)
