[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-backend"
version = "0.1.0"
description = "TaskFlow backend service with plugin system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.27.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.14",
    "langchain-community>=0.3.27",
    "pygit2>=1.13.0",
    "pluggy>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
